# previsao_agendamento_acomodacao

./: README.md  pyproject.toml
notebooks/: c1.acomodacao_inicio_fim.ipynb  c2.agendamento_acomodacao_metricas_desbalanceamento.ipynb  c3.agendamento_acomodacao_tratando_na.ipynb  c3.tratando_na.ipynb  c4.feature_engineering.ipynb  c5.balanceamento_dataset.ipynb  c6.analise_exploratoria_Insights.ipynb  c7.analise_exploratoria_correlacao.ipynb  c8.preparacao_dados.ipynb  c9.novos_modelos.ipynb
notebooks/estudo/: principal_component_analysis_PCA.ipynb
