[tool.poetry]
name = "previsao_agendamento_acomodacao"
version = "0.1.0"
description = ""
authors = ["Laurivan <laurivansareta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.1"
sklearn = "^0.0"
scikit-plot = "^0.3.7"
keras = "^2.10.0"
numpy = "^1.23.4"
seaborn = "^0.12.1"
tensorflow = "^2.10.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
